assets/css/style.css
* {
    
    color: #d55bd7;
    font-family: monospace; 
    
}

body {
    max-height: 100vh;
    max-width: 100vw ;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    background-image: url(/./assets/images/background.jpg);
    
}
header {
    display: flex;
    flex-flow: column wrap;
    flex: 0 0 0;
    text-align: center;
    height: 15%;
    justify-content: space-around;
    line-height: 4;
}

header h1 {
    text-align: center;
    font-size: 30px;
}
main {
    display: flex;
    flex: auto;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    margin: 0% 10%;
    
    
}

.card {
    display: flex;
    
    flex-direction: column;
    align-items: center;
    border-color: #8e1091;
    border-style: ridge;
    border-width: 3px;
    padding-top: 0%;
    margin: 20px 0px;    
    width: 50vh;
}

.card > * {
    padding: 3px;
    margin: 0 5% 2px;
    width: 95%;
}

.card h1 {
    position: relative;
    margin-top: -20px;
    border-style: ridge;
    border-color: #8e1091;
    border-radius: 8px; 
    text-align: center;
    background-color: #66298d;
}

.card p {
    text-align: center;
}

.card, .card h1 {
    border-radius: 8px;
    transition: all -0.5s ease-in-out;
}

.card:hover,
.card:hover h1 {
    border-color: #f197f3;
    box-shadow: inset 0px 0px 8px
     rgb(232, 102, 236), 0 0 15px
     rgba(232, 102, 246, 1);
}

.card:hover h1, .card:hover {
    animation: opacity 0.04s ease-in-out infinite;
}

.card:hover pre, .card:hover h1, .card:hover p {
    color: #fff;
  text-shadow:
  #FFF 0px 0px 5px,
  #FFF 0px 0px 10px, 
  #FFF 0px 0px 15px, 
  #FF2D95 0px 0px 20px, 
  #FF2D95 0px 0px 30px, 
  #FF2D95 0px 0px 40px, 
  #FF2D95 0px 0px 50px, 
  #FF2D95 0px 0px 75px, 
  -26px 21px 0px rgba(206,89,55,0);
}


@keyframes opacity {
    0% {
        opacity: 1;
    }
    50% {
        opacity: 0.93;
    }
    100% {
        opacity: 1;
    }
}


pre {
    background-color:#66298d;
    background-image: linear-gradient(90deg, rgba(167,55,171,1) 0%, rgba(90,44,119,0.717201166180758) 31%, rgba(153,0,255,1) 100%);
    border-radius: 20px;
    color: #5ff0f7c9;   
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: start;
    min-width: 0%;
    white-space: pre-wrap;
}

footer {
    display: block;
    text-align: center;
    min-height: 2vh;
    
}

